[package]
name = "pakige"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "[UNFINISHED] A library crate to parse various Linux package formats into highly structured data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deb-version7 = "0.1.1"
regex = "1.10.5"
